update indonesian translation

--- a/franz-app/locales/id_ID.json
+++ b/franz-app/locales/id_ID.json
@@ -68,22 +68,22 @@
     "68-remember-to-enable-desktop-notifications-in-your-groupme-settings": "Ingat untuk mengaktifkan notifikasi komputer pada pengaturan GroupMe anda",
     "69-acknowledgements": "Pernyataan Resmi",
     "70-file": "Berkas",
-    "71-only-direct-logins-are-currently-supported": "Please note that 3rd-party login methods are not currently supported.",
-    "1606221210-account": "Account",
+    "71-only-direct-logins-are-currently-supported": "Franz belum mendukung untuk login menggunakan aplikasi pihak ketiga saat ini.",
+    "1606221210-account": "Akun",
     "1606221210-email": "Email",
     "1606221210-newsletter": "Newsletter",
-    "1606221210-please-subscribe-me-the-franz-newsletter": "Please subscribe me the Franz newsletter",
-    "1606221220-i-use-franz-for": "I use Franz for",
-    "1606221220-personal-use": "Personal use",
-    "1606221220-commercial-use": "Commercial use",
-    "1606221220-non-profit-ngo-use": "Non profit/NGO use",
-    "1606221230-language": "Language",
+    "1606221210-please-subscribe-me-the-franz-newsletter": "Saya ingin berlangganan newsletter Franz",
+    "1606221220-i-use-franz-for": "Saya menggunakan Franz untuk",
+    "1606221220-personal-use": "Penggunaan pribadi",
+    "1606221220-commercial-use": "Penggunaan komersial",
+    "1606221220-non-profit-ngo-use": "Penggunaan non profit/NGO",
+    "1606221230-language": "Bahasa",
     "1606221230-cache": "Cache",
-    "1606221230-clear-the-franz-cache": "Clear the Franz cache",
-    "1606221230-show-unread-message-badge-for-all-new-messages": "Show unread message badge for all new messages",
-    "1606221230-you-will-be-notified-about-all-new-messages-in-a-channel-not-just-username-channel-here": "You will be notified about all new messages in a channel, not just @username, @channel, @here, ...",
-    "1607011340-reload-service": "Reload Service",
-    "1607041400-app": "App",
-    "1607041500-general": "General",
-    "1607041400-leave-franz-running-in-the-notification-area-when-window-is-closed": "Leave Franz running in the notification area when window is closed"
+    "1606221230-clear-the-franz-cache": "Bersihkan cache Franz",
+    "1606221230-show-unread-message-badge-for-all-new-messages": "Tampilkan notifikasi untuk semua pesan yang belum dibaca",
+    "1606221230-you-will-be-notified-about-all-new-messages-in-a-channel-not-just-username-channel-here": "Anda akan diberikan notifikasi tentang semua pesan baru dalam sebuah channel, tidak hanya @username, @channel, @here, ...",
+    "1607011340-reload-service": "Muat Ulang Layanan",
+    "1607041400-app": "Aplikasi",
+    "1607041500-general": "Umum",
+    "1607041400-leave-franz-running-in-the-notification-area-when-window-is-closed": "Biarkan Franz bekerja pada area notifikasi ketika jendela ditutup"
 }
